--- a/web/app/static/css/claslite.css
+++ b/web/app/static/css/claslite.css
@@ -143,27 +143,36 @@ img.toggle-expand {
 
 #header {
 	width: 100%;
-	height: 60px;
+	height: 76px;
 	font-size: 16px;
 	color: #F9FDFA;
 	background: url(../images/claslite-logo.png) no-repeat #26432B;
-	background-position: 3px 3px;
+	background-position: -3px 0;
 	margin-bottom: 8px;
 }
 
 #header-tagline {
-	font-size: 20px;
-	line-height: 22px;
+	font-size: 19px;
+	line-height: 20px;
 	font-weight: bold;
 	position: absolute;
-	left: 212px;
-	top: 9px;
+	left: 200px;
+	top: 8px;
+}
+
+#header-subtitle {
+	font-size: 18px;
+	line-height: 18px;
+	font-weight: bold;
+	position: absolute;
+	left: 10px;
+	top: 50px;
 }
 
 #header-links {
 	position: absolute;
-	top: 8px;
-	right: 8px;
+	top: 13px;
+	right: 10px;
 	text-align: right;
 }
 
@@ -172,7 +181,7 @@ img.toggle-expand {
 }
 
 #site-links {
-	margin-bottom: 8px;
+	margin-bottom: 14px;
 }
 
 span.pipe {
@@ -190,7 +199,7 @@ div.tabs {
 
 ul.tabs {
 	margin: 0;
-	padding: 4px 10px 0 8px;
+	padding: 2px 10px 0 8px;
 	list-style: none;
 }
 
@@ -247,7 +256,7 @@ ul.tabs a.hover span {
 
 #tabs-base {
 	width: 100%;
-	height: 16px;
+	height: 12px;
 	background: #D5E1E8 url("../images/tabs-background.gif") repeat-x bottom;
 }
 
