--- a/web/app/static/css/claslite.css
+++ b/web/app/static/css/claslite.css
@@ -142,6 +142,7 @@ img.toggle-expand {
 /* Header */
 
 #header {
+	position: relative;
 	width: 100%;
 	height: 76px;
 	font-size: 16px;
@@ -152,12 +153,10 @@ img.toggle-expand {
 }
 
 #header-tagline {
-	font-size: 19px;
-	line-height: 20px;
-	font-weight: bold;
+	font-size: 26px;
 	position: absolute;
-	left: 200px;
-	top: 8px;
+	left: 197px;
+	bottom: 32px;
 }
 
 #header-subtitle {
