Add test statistics

--- a/web/app/static/css/claslite.css
+++ b/web/app/static/css/claslite.css
@@ -346,6 +346,22 @@ input.color-picker {
 	font-size:13px !important;
 }
 
+div#statistics-color-pickers {
+	padding-left: 25px;
+}
+
+div.color-picker-box {
+	float: left;
+	width: 70px;
+	padding-left: 20px;
+}
+
+div.color-picker-box label {
+	display: block;
+	font-weight: bold;
+	margin-bottom: 6px;
+}
+
 /* Color legend */
 
 .legend-colors {
@@ -451,6 +467,40 @@ div.slider-panel {
 	left: 350px;
 	top: 0;
 	height: 100%;
+}
+
+/* Statistics */
+
+div.statistics-chart {
+	margin-top: 15px;
+}
+
+div.statistics-bar-label {
+	float: left;
+	padding-top: 4px;
+	width: 45px;
+}
+
+div.statistics-bar-container {
+	float: left;
+	position: relative;
+	width: 275px;
+	height: 20px;
+	border: 2px solid #666;
+	margin-bottom: -2px;
+	/*margin-bottom: 6px;*/
+}
+
+#statistics-chart-1 div.statistics-bar-container {
+	margin-bottom: 6px;
+}
+
+div.statistics-bar {
+	position: absolute;
+	left: 0;
+	top: 0;
+	border-right: 1px solid #666;
+	height: 20px;
 }
 
 /* Logos */
