--- a/web/app/static/css/claslite.css
+++ b/web/app/static/css/claslite.css
@@ -272,7 +272,12 @@ ul.tabs a.hover span {
 	position: absolute;
 	left: 0;
 	top: 0;
+	width: 100%;
 	height: 100%;
+}
+
+#main.with-map #sidebar-outer {
+	width: 350px;
 }
 
 #sidebar-scrolling {
@@ -467,6 +472,11 @@ div.slider-panel {
 	left: 350px;
 	top: 0;
 	height: 100%;
+	visibility: hidden;
+}
+
+#main.with-map #mapwrap {
+	visibility: visible;
 }
 
 /* Statistics */
