Add forest cover table

--- a/web/app/static/css/claslite.css
+++ b/web/app/static/css/claslite.css
@@ -494,6 +494,26 @@ div.statistics-section {
 	visibility: visible;
 }
 
+table.stats-table {
+	margin-top: 12px;
+}
+
+table.stats-table  th {
+	border: 1px solid #666;
+	padding: 6px;
+}
+
+table.stats-table  th.stats-table-topleft {
+	border-left: none;
+	border-top: none;
+}
+
+table.stats-table  td {
+	border: 1px solid #666;
+	padding: 6px;
+	text-align: right;
+}
+
 /* Spinner */
 
 #spinner {
