--- a/web/app/static/css/claslite.css
+++ b/web/app/static/css/claslite.css
@@ -210,8 +210,8 @@ div.icon16-toggle-expand {
 #header {
 	position: relative;
 	width: 100%;
-	height: 76px;
-	font-size: 16px;
+	height: 55px;
+	font-size: 15px;
 	color: #F9FDFA;
 	background: url(../images/claslite-logo.png) no-repeat #26432B;
 	background-position: -3px 0;
@@ -219,25 +219,17 @@ div.icon16-toggle-expand {
 }
 
 #header-tagline {
-	font-size: 26px;
+	font-size: 19px;
+	line-height: 21px;
 	position: absolute;
-	left: 197px;
-	bottom: 32px;
-}
-
-#header-subtitle {
-	font-size: 18px;
-	line-height: 18px;
-	font-weight: bold;
-	position: absolute;
-	left: 10px;
-	top: 50px;
+	left: 198px;
+	top: 6px;
 }
 
 #header-links {
 	position: absolute;
-	top: 13px;
-	right: 10px;
+	top: 9px;
+	right: 105px;
 	text-align: right;
 }
 
@@ -246,7 +238,7 @@ div.icon16-toggle-expand {
 }
 
 #site-links {
-	margin-bottom: 14px;
+	margin-bottom: 6px;
 }
 
 span.pipe {
@@ -622,8 +614,8 @@ table.stats-table  td {
 
 #earth-engine-logo {
 	position: absolute;
-	right: 5px;
-	top: 81px;
+	right: 4px;
+	top: 60px;
 	display: block;
 	text-decoration: none;
 	padding: 4px 4px 2px 4px;
@@ -657,9 +649,9 @@ table.stats-table  td {
 
 #cis-logo {
 	position: absolute;
-	right: 5px;
-	bottom: 20px;
-	width: 180px;
-	height: 81px;
-	background: url(../images/cis-logo.gif) no-repeat;
+	right: 8px;
+	top: 8px;
+	width: 84px;
+	height: 39px;
+	background: url(../images/cis-logo-header.gif) no-repeat;
 }
