--- a/web/app/static/css/claslite.css
+++ b/web/app/static/css/claslite.css
@@ -460,17 +460,14 @@ div.color-picker-box label {
 	margin: 8px 0 12px 30px;
 }
 
-.legend-color {
-	width: 14px;
-	height: 14px;
-	float: left;
+.legend-colors .color-picker-row {
+	margin-bottom: 0;
 }
 
-.legend-label {
-	margin-left:4px;
-	font-size: 14px;
-	line-height: 14px;
-	float: left;
+.legend-colors input.color-picker {
+	width: 18px;
+	height: 16px;
+	border: none;
 }
 
 /* Slider */
