--- a/web/app/static/css/claslite.css
+++ b/web/app/static/css/claslite.css
@@ -213,7 +213,6 @@ div.icon16-toggle-expand {
 	background-position: -128px 0;
 }
 
-
 /* Header */
 
 #header {
@@ -426,6 +425,12 @@ li.geocode-item.active {
 	background-color: #DDD;
 }
 
+/* Hider */
+
+div.hider {
+	cursor: pointer;
+}
+
 /* Color picker */
 
 div.color-picker-row {
@@ -464,8 +469,14 @@ div.color-picker-box label {
 
 /* Color legend */
 
+.legend-wrapper {
+	margin: 8px 0 12px 32px;
+}
+
 .legend-colors {
-	margin: 8px 0 12px 30px;
+	display: none;
+	margin-top: 6px;
+	margin-left: 26px;
 }
 
 .legend-colors .color-picker-row {
