Add session support and incrementing counter test

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -65,7 +65,7 @@
 				</div>
 				
 				<div id="user-links">
-					<b>clasliteuser@gmail.com</b>
+					<b>{{ email | e }}</b>
 					<span class="pipe">|</span>
 					<a href="#">My account</a>
 					<span class="pipe">|</span>
