--- a/web/app/templates/signup.html
+++ b/web/app/templates/signup.html
@@ -5,19 +5,24 @@
 	<title>CLASlite Forest Monitoring - Carnegie Institution for Science</title>
 	
 	<style type="text/css">
+		form { display: none; }
 		h1 { font-size: 1em; }
-		form { border: none; }
-		input { font-size: 1em;  font-weight: bold; }
 	</style>
 	
 </head>
 <body>
 	
-	<h1>Welcome to CLASlite!</h1>
-	
-	<form method="post" action="{{ current_url }}">
-		<input type="submit" value="Continue">
+	<form id="go" method="post" action="{{ current_url }}">
+		<input type="submit">
 	</form>
+	
+	<script type="text/javascript">
+		document.getElementById('go').submit();
+	</script>
+	
+	<noscript>
+		<h1>Please enable JavaScript and then reload this page to use CLASlite.</h1>
+	</noscript>
 	
 </body>
 </html>
