Change code licensing to public domain UNLICENSE. Comment changes only, no code changes.

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -4,6 +4,11 @@
 	
 	<title>CLASlite Forest Monitoring - Carnegie Institution for Science</title>
 	
+	<!--
+		By Michael Geary - http://mg.to/
+		See UNLICENSE or http://unlicense.org/ for public domain notice.
+	-->
+
 	<link type="text/css" href="css/claslite.css" rel="stylesheet" />
 	
 	<script type="text/javascript">
