Get JSON-RPC working with test case

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -26,6 +26,7 @@
 		})();
 	</script>
 	
+	<script type="text/javascript" src="js/jquery.jsonrpc.js"></script>
 	<script type="text/javascript" src="js/scriptino-base.js"></script>
 	<script type="text/javascript" src="js/scriptino-color.js"></script>
 	<script type="text/javascript" src="js/scriptino-combo.js"></script>
