Get precalc and forest cover map working with new Earth Engine version. Forest change map is still broken.

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -229,11 +229,11 @@
 							<div style="margin-bottom:16px;">
 								<label class="year-source-label" for="sat-select">Source:</label>
 								<select id="sat-select">
-									<option value="LANDSAT/L5_L1T">Landsat 5 TM</option>
-									<option value="LANDSAT/L7_L1T" selected="selected">Landsat 7 ETM SLC-off (2003+)</option>
-									<option value="">Landsat 7 ETM SLC-on (1999-2003)</option>
-									<option value="">Landsat 5-7 combined</option>
-									<option value="">MODIS</option>
+									<option value="L5|LANDSAT/L5_L1T">Landsat 5 TM</option>
+									<option value="L7|LANDSAT/L7_L1T" selected="selected">Landsat 7 ETM SLC-off (2003+)</option>
+									<option value="|">Landsat 7 ETM SLC-on (1999-2003)</option>
+									<option value="|">Landsat 5-7 combined</option>
+									<option value="MODIS|MODIS">MODIS</option>
 								</select>
 							</div>
 							
