--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -211,6 +211,12 @@
 							
 							<div style="margin-bottom:16px;">
 								
+								<div class="forestview-fractcover">
+									<label class="year-source-label" for="fractcover-date">Year:</label>
+									<select class="date-select date-start" id="fractcover-date">
+									</select>
+								</div>
+								
 								<div class="forestview-forestcover">
 									<label class="year-source-label" for="forestcover-date">Year:</label>
 									<select class="date-select date-start" id="forestcover-date">
