Don't translate location/project names

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -144,9 +144,9 @@
 							
 							<div class="float-left">
 								
-								<input class="project-input combo-input" id="project-input" />
+								<input id="project-input" class="notranslate project-input combo-input" />
 								
-								<ul id="project-list" class="project-list combo-list">
+								<ul id="project-list" class="notranslate project-list combo-list">
 									<li>First Test Project</li>
 									<li>Second Test Project</li>
 									<li>Third Test Project</li>
@@ -173,12 +173,12 @@
 					
 					<!-- Begin Location Panel -->
 					
-					<div class="tab-panel location-panel" id="location-panel">
+					<div id="location-panel" class="tab-panel location-panel">
 						
 						<form id="location-search-form">
 							
 							<label for="location-search-input">Click the map or search for a location:</label>
-							<input id="location-search-input" />
+							<input id="location-search-input" class="notranslate" />
 							
 							<div id="location-search-buttons">
 								<a href="#" id="show-search-options">Advanced search&#8230;</a>
@@ -188,7 +188,7 @@
 							
 						</form>
 						
-						<div id="location-results-list">
+						<div id="location-results-list" class="notranslate">
 						</div>
 						
 						<div id="assets-list">
