Get fractional cover map working

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -295,6 +295,14 @@
 								</div>
 							</div>
 							
+							<div class="forestview-fractcover map-only">
+								<div class="slider-panel map-only">
+									<script type="text/javascript">
+										document.write( opacitySlider('fractcover') );
+									</script>
+								</div>
+							</div>
+							
 							<div class="units stats-only" id="statistics-units">
 								<label for="statistics-units-select">
 									<b>Units:</b>
