Add bias/gain/gamma fields to fractional cover

--- a/web/app/templates/claslite.html
+++ b/web/app/templates/claslite.html
@@ -301,6 +301,20 @@
 										document.write( opacitySlider('fractcover') );
 									</script>
 								</div>
+								<table style="margin-top:10px;">
+									<tr>
+										<td><label for="fractcover-bias">Bias: </label></td>
+										<td><input id="fractcover-bias" value="0.0"></td>
+									</tr>
+									<tr>
+										<td><label for="fractcover-gain">Gain: </label></td>
+										<td><input id="fractcover-gain" value="255.0"></td>
+									</tr>
+									<tr>
+										<td><label for="fractcover-gamma">Gamma: </label></td>
+										<td><input id="fractcover-gamma" value="1.0"></td>
+									</tr>
+								</table>
 							</div>
 							
 							<div class="units stats-only" id="statistics-units">
